# production-ready-ai-templates-for-consulting

./: .gitignore  README.md  copier.yml  dvc.yaml  pyproject.toml
.github/workflows/: dvc-pipeline.yml
aitemplates/: copier.yml  params.yaml
aitemplates/{{project_name}}/: dvc.yml  pyproject.toml
aitemplates/{{project_name}}/configs/: validate.py
aitemplates/{{project_name}}/promotion/: rules.py  select.py
aitemplates/{{project_name}}/registry/: client.py  promote.py
aitemplates/{{project_name}}/serving/: app.py  loader.py  rollback.py
aitemplates/{{project_name}}/src/: deploy.py  promote.py  train.py
factory/: batch.py
template/: .dvcignore  .env.prod.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  params.example.yaml  params.yaml  pyproject.toml
template/.dvc/: config
template/.github/workflows/: dvc-pipeline.yml
template/agents/: eval_agent.py
template/factory/: generate.py  templates.py
template/infra/logging/: config.yaml
template/infra/mlflow/: Dockerfile  tracking_server.yml
template/infra/monitoring/: prometheus.yml
template/infra/monitoring/grafana_dashboards/: config.yaml  dashboard.json
template/promotion/: gate.py  rules.py
template/scripts/: init-dvc-databases.sql  setup.sh  wait_for_mlflow.py
template/{{project_name}}/configs/: loader.py  schema.py  validate.py
template/{{project_name}}/data/: .gitkeep
template/{{project_name}}/evaluation/: metrics.py  reporting.py
template/{{project_name}}/experiments/: registry.py  runner.py
template/{{project_name}}/models/: .gitkeep
template/{{project_name}}/monitoring/: logging.py  metrics_export.py
template/{{project_name}}/pipelines/: dvc_pipeline.py  steps.py
template/{{project_name}}/serving/: api.py  loader.py  mlflow_model.py  rollback.py  schema.py
template/{{project_name}}/src/: utils.py
template/{{project_name}}/src/data/: features.py  preprocess.py
template/{{project_name}}/src/models/: inference.py  train.py  train_utils.py
template/{{project_name}}/tests/: test_latency.py  test_preprocess.py  test_schema.py  test_train.py
test/promotion/: thresholds.yaml
test/test/evaluation/: compare.py
test/test/experiments/: batch_runner.py
test/test/monitoring/: drift.py
test/test/serving/: schema.py
test/test/src/data/: preprocess.py
test/test/tests/: test_schema.py
{{project_name}}/: dvc.yml
{{project_name}}/configs/: schema.py  validate.py
{{project_name}}/evaluation/: metrics.py
{{project_name}}/promotion/: rules.py
{{project_name}}/serving/: loader.py  schema.py
{{project_name}}/src/: train.py
{{project_name}}/src/data/: __init__.py
