[project]
name = "aitemplates"
version = "0.1.0"
description = ""
authors = [
    {name = "emedinac",email = "edgarmedina1801@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mlflow (>=3.11.1,<4.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "jinja2-time (>=0.2.0,<0.3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "dvc (>=3.67.1,<4.0.0)",
    "copier (>=9.15.0,<10.0.0)"
]
