[project]
name = "{{ project_name }}"
version = "0.1.0"
description = "{{ description }}"
authors = [
    { name = "{{ author }}" }
]
readme = "README.md"
requires-python = ">={{ python_version }},<3.15"
dependencies = [
    "fastapi>=0.136.1,<0.137.0",
    "mlflow>=3.11.1,<4.0.0",
    "pydantic>=2.13.3,<3.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "uvicorn>=0.46.0,<0.47.0",
]

[dependency-groups]
dev = [
    "dvc>=3.67.1,<4.0.0",
    "pytest>=9.0.3,<10.0.0",
    "ruff>=0.15.12,<0.16.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
